agregado de mostrado de observaciones para tipo de pago deposito

--- a/frontend/src/app/components/pages/cobros/kardex-modal/kardex-modal.component.scss
+++ b/frontend/src/app/components/pages/cobros/kardex-modal/kardex-modal.component.scss
@@ -13,7 +13,7 @@
 }
 
 .modal-header {
-  background: linear-gradient(135deg, #669fea 0%, #020e53 100%);
+  background: #000a44;
   border: none;
   padding: 1rem;
   
